--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	    <h1 class="header-name">RPG Game</h1>
   	</div>
   	<div class="container text-center">
-  		<h2>Select your good guy</h2>
+  		<h2 id"selectionTitle">Select your good guy</h2>
     	<div class="row">
       		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 		        <div class="row" id="availableAttackers">
@@ -29,8 +29,8 @@
         		<button class="btn btn-danger disabled" id="attack" disabled="true">Attack</button>
       		</div>
       		<div class="col-xs-12 col-sm-5 col-md-5 col-lg-5">
-        		<h2>The Bad Guys</h2>
-        		<div id="badGuys"></div>
+        		<h2>The Bad Guy</h2>
+        		<div id="badGuy"></div>
       		</div>
     	</div>
     	<button class="btn btn-primary" id="restartGame">Restart Game</button>
