--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
 	<div class="page-header text-center">
-	    <h1 class="header-name">RPG Game</h1>
+	    <h1 class="header-name">Avengers RPG!</h1>
+	    <button class="btn btn-success" type="button">
+		  	Total Villans Killed <span class="badge" id="villansKilled">0</span>
+		</button>
+		<button class="btn btn-danger" type="button">
+		  	Total Times Killed <span class="badge" id="totalDeaths">0</span>
+		</button>
   	</div>
   	<div class="container text-center">
-  		<h2 id"selectionTitle">Select your good guy</h2>
+  		<h2 id="selectionTitle">Select your good guy!</h2>
     	<div class="row">
       		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 		        <div class="row" id="availableAttackers">
